--- a/frontend_app/public/index.html
+++ b/frontend_app/public/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
 
-    <title>LiskCollectible</title>
+    <title>LiskCollectible | Sell digital file bundles backed by NFTs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
